--- a/was04-department/was04-department-core/pom.xml
+++ b/was04-department/was04-department-core/pom.xml
@@ -124,8 +124,8 @@
 			<artifactId>commons-dbcp</artifactId>
 			<version>1.4</version>
 		</dependency>
-		<!-- <dependency> <groupId>org.eclipse.persistence</groupId> <artifactId>eclipselink</artifactId> 
-			<version>2.5.0</version> </dependency> -->
+		<!-- <dependency> <groupId>org.eclipse.persistence</groupId> <artifactId>eclipselink</artifactId> <version>2.5.0</version> 
+			</dependency> -->
 
 		<!-- Unit tests -->
 		<dependency>
@@ -173,12 +173,12 @@
 		<dependency>
 			<groupId>com.sun.faces</groupId>
 			<artifactId>jsf-api</artifactId>
-			<version>2.1.13</version>
+			<version>2.2.8</version>
 		</dependency>
 		<dependency>
 			<groupId>com.sun.faces</groupId>
 			<artifactId>jsf-impl</artifactId>
-			<version>2.1.13</version>
+			<version>2.2.8</version>
 		</dependency>
 
 		<dependency>
