--- a/was04-department/was04-department-core/.project
+++ b/was04-department/was04-department-core/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>was04-department-core</name>
+	<name>project-core</name>
 	<comment></comment>
 	<projects>
 	</projects>
