--- a/project/pom.xml
+++ b/project/pom.xml
@@ -2,12 +2,12 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
-	<groupId>pl.lodz.p.was04</groupId>
-	<artifactId>was04-department</artifactId>
+	<groupId>pl.lodz.p.project</groupId>
+	<artifactId>project</artifactId>
 	<version>1.0.0-SNAPSHOT</version>
 	<packaging>pom</packaging>
 
-	<name>WAS04 Department Parent</name>
+	<name>Project Parent</name>
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -17,11 +17,11 @@
 	</properties>
 
 	<modules>
-		<module>was04-db</module>
-		<module>was04-department-commons</module>
-		<module>was04-department-invoicing</module>
-		<module>was04-department-warehouse</module>
-		<module>was04-department-core</module>
+		<module>project-db</module>
+		<module>project-commons</module>
+		<module>project-invoicing</module>
+		<module>project-warehouse</module>
+		<module>project-core</module>
 	</modules>
 
 	<build>
@@ -42,18 +42,18 @@
 		<dependencies>
 			<!-- Sale System -->
 			<dependency>
-				<groupId>pl.lodz.p.was04</groupId>
-				<artifactId>was04-department-commons</artifactId>
+				<groupId>pl.lodz.p.project</groupId>
+				<artifactId>project-commons</artifactId>
 				<version>${project.version}</version>
 			</dependency>
 			<dependency>
-				<groupId>pl.lodz.p.was04</groupId>
-				<artifactId>was04-department-invoicing</artifactId>
+				<groupId>pl.lodz.p.project</groupId>
+				<artifactId>project-invoicing</artifactId>
 				<version>${project.version}</version>
 			</dependency>
 			<dependency>
-				<groupId>pl.lodz.p.was04</groupId>
-				<artifactId>was04-department-warehouse</artifactId>
+				<groupId>pl.lodz.p.project</groupId>
+				<artifactId>project-warehouse</artifactId>
 				<version>${project.version}</version>
 			</dependency>
 
