--- a/project/project-core/pom.xml
+++ b/project/project-core/pom.xml
@@ -165,6 +165,12 @@
 			<artifactId>jackson-databind</artifactId>
 			<version>${jackson.version}</version>
 		</dependency>
+		<dependency>
+			<groupId>com.itextpdf</groupId>
+			<artifactId>itextpdf</artifactId>
+			<version>5.4.2</version>
+		</dependency>
+
 
 		<!-- JSF -->
 		<dependency>
