--- a/project/project-db/pom.xml
+++ b/project/project-db/pom.xml
@@ -17,6 +17,11 @@
             <artifactId>postgresql</artifactId>
             <version>${postgresql.connector.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.liquibase</groupId>
+            <artifactId>liquibase-core</artifactId>
+            <version>3.0.6</version>
+        </dependency>
     </dependencies>
     
     <build>
